Use slightly more sensible struture for the stack.